more contrast issues fixed

--- a/Bountiful/styles/base.css
+++ b/Bountiful/styles/base.css
@@ -192,8 +192,9 @@
     footer .last-modified {
         color: var(--color-accent3);
     }
-    footer h2 {
-        color: var(--color-accent3);
+    footer p {
+        color: var(--color-accent2);
+        font-weight: bold;
     }
     footer {
         margin-top: -250px;
@@ -355,7 +356,7 @@
         position: relative;
         text-align: center;
         margin-bottom: 20px;
-        background-color: var(--color-accent7);
+        background-color: var(--color-primary);
         background-image: url('../images/chalkboard.png');
         background-size: 100% auto;
         background-repeat: repeat-y;
